--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.thymeleaf.view-names=*
 ##############################################
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/temp?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=monetware
+spring.datasource.password=example
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Number of ms to wait before throwing an exception if no connection is available.
 spring.datasource.tomcat.max-wait=10000
