--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,5 @@ spring.datasource.tomcat.test-on-borrow=true
 ## Mybatis (MybatisAutoConfiguration) ##
 ########################################
 mybatis.mapper-locations=classpath:/mybatis/*.xml
+
+logging.config=classpath:log4j2.xml
