--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>SpringBootTemplate</artifactId>
 	<version>1.0.0</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>SpringBootTemplate</name>
 	<description>Template project for Spring Boot</description>
@@ -25,9 +25,30 @@
 		<!-- 使用thymeleaf模板3.0版本 -->
 		<thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
 		<thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
+
+		<!-- log4j2配置属性 -->
+		<log4j.logger>
+			<![CDATA[
+				<root level="INFO">
+					<appender-ref ref="development" />
+				</root>
+			]]>
+		</log4j.logger>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<!-- 只保留log4j2 -->
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<!-- 如果需要打成war包，加上下面的依赖 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -67,6 +88,12 @@
 			<version>1.3.0</version>
 		</dependency>
 
+		<!-- 日志 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
 		<!-- 测试 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -95,7 +122,29 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<targetPath>.</targetPath>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>log4j2.xml</include>
+				</includes>
+				<filtering>true</filtering>
+				<targetPath>.</targetPath>
+			</resource>
+		</resources>
 	</build>
 
-
+	<profiles>
+		<profile>
+			<id>development</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+	</profiles>
 </project>
