--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ spring.thymeleaf.view-names=*
 ##############################################
 ## DataSource (DataSourceAutoConfiguration) ##
 ##############################################
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/temp?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&autoReconnect=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/example?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&autoReconnect=true
+spring.datasource.username=example
 spring.datasource.password=example
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Number of ms to wait before throwing an exception if no connection is available.
@@ -39,6 +39,15 @@ spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
 # Validate the connection before borrowing it from the pool.
 spring.datasource.tomcat.test-on-borrow=true
+
+##############################################
+## DataSource (MongoDB) ##
+##############################################
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=example
+spring.data.mongodb.username=example
+spring.data.mongodb.password=example
 
 ########################################
 ## Mybatis (MybatisAutoConfiguration) ##
